Copies column instances to be unique per table instance.
Fixes bug 964345.

Incidentally fixes bug 964351 as well by wrapping the dropdown
actions template code in a spaceless tag.

Change-Id: I672cb517d230db235c90a403e9b8ac0740e8732d

--- a/horizon/templates/horizon/common/_data_table_row_actions.html
+++ b/horizon/templates/horizon/common/_data_table_row_actions.html
@@ -1,5 +1,6 @@
 {% load horizon %}
 
+{% spaceless %} {# This makes sure whitespace doesn't affect positioning for dropdown. #}
 {% if row_actions|length > 1 %}
 <div class="btn-group">
     {% for action in row_actions %}
@@ -25,3 +26,4 @@
     {% include "horizon/common/_data_table_row_action.html" %}
   {% endfor %}
 {% endif %}
+{% endspaceless %}
