--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -305,11 +305,54 @@ a.current_item:hover h3, a.current_item:hover h4 {
   padding: 0 0 0 1px;
 }
 
+
+.table-bordered {
+  border: none;
+}
 .table_header {
   min-height: 35px;
   padding: 5px 0;
 }
-
+.table_caption th {
+  background-color: transparent;
+  border: none;
+}
+.table-bordered tr.table_caption + tr th {
+  border-top: 1px solid #ddd;
+}
+.table-bordered tr.table_caption + tr th:first-child,
+.table-bordered tr.table_caption + tr th.hide + th {
+  -moz-border-radius-topleft: 4px;
+  -webkit-border-top-left-radius: 4px;
+  border-top-left-radius: 4px;
+  border-left: 1px solid #ddd;
+}
+.table-bordered tr.table_caption + tr th:last-child {
+  -moz-border-radius-topright: 4px;
+  -webkit-border-top-right-radius: 4px;
+  border-top-right-radius: 4px;
+  border-right: 1px solid #ddd;
+}
+.table-bordered tbody tr td:first-child,
+.table-bordered tfoot tr td:first-child {
+  border-left: 1px solid #ddd;
+}
+.table-bordered tbody tr td:last-child,
+.table-bordered tfoot tr td:last-child {
+  border-right: 1px solid #ddd;
+}
+.table-bordered tfoot tr td:first-child {
+  border-bottom: 1px solid #ddd;
+  -moz-border-radius-bottomleft: 4px;
+  -webkit-border-bottom-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+}
+.table-bordered tfoot tr td:last-child {
+  border-bottom: 1px solid #ddd;
+  -moz-border-radius-bottomright: 4px;
+  -webkit-border-bottom-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+}
 .table_title h3, .table_header h3 {
     font-family: anivers;
     font-weight: normal;
@@ -317,7 +360,6 @@ a.current_item:hover h3, a.current_item:hover h4 {
     margin-bottom: 5px;
     float: left;
 }
-
 th {
     background: #f1f1f1;
 }
