--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -1,5 +1,7 @@
 {% comment %} jQuery and Plugins {% endcomment %}
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.min.js' type='text/javascript' charset="utf-8"></script>
+<script src='{{ STATIC_URL }}horizon/js/json2.js' type='text/javascript' charset="utf-8"></script>
+<script src='{{ STATIC_URL }}horizon/js/jquery/jquery.cookie.js' type='text/javascript' charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.quicksearch.js' type='text/javascript' charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.example.min.js' type='text/javascript' charset="utf-8"></script>
 <script src="{{ STATIC_URL }}horizon/js/jquery/jquery.table-sorter.js" type="text/javascript" charset="utf-8"></script>
