Adds configurable ajax connection queueing.
Fixes bug 965910.

Change-Id: I84807f6ca0d9769d25b942c151c1a83501648a0a

--- a/horizon/templates/horizon/client_side/conf.html
+++ b/horizon/templates/horizon/client_side/conf.html
@@ -4,6 +4,9 @@
  */
 horizon.conf = {
     debug: {{ debug|yesno:"true,false" }},
-    static_url: "{{ STATIC_URL }}"
+    static_url: "{{ STATIC_URL }}",
+    ajax: {
+        queue_limit: {{ HORIZON_CONFIG.ajax_queue_limit|default:"null" }}
+    }
 }
 </script>
