--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_overview.html
@@ -82,8 +82,8 @@
         {% for volume in instance.volumes %}
           <dt>{% trans "Volume" %}</dt>
           <dd>
-            <a href="{% url horizon:nova:instances_and_volumes:volumes:detail volume.volume_id %}">
-              {{ volume.volume_id }}&nbsp;({{ volume.device }})
+            <a href="{% url horizon:nova:instances_and_volumes:volumes:detail volume.volumeId %}">
+              {{ volume.volumeId }}&nbsp;({{ volume.device }})
             </a>
           </dd>
         {% endfor %}
