Don't choke on unlimited quotas. Fixes bug 971937.
Change-Id: Icc8b6a4189197c9d750163b1246173ca1a00afbe

--- a/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_allocate.html
+++ b/horizon/dashboards/nova/templates/nova/access_and_security/floating_ips/_allocate.html
@@ -20,7 +20,7 @@
     <h3>{% trans "Project Quotas" %}</h3>
     <div class="quota_title">
       <strong>{% trans "Floating IP" %} <span>({{ usages.floating_ips.used }})</span></strong>
-      <p>{{ usages.floating_ips.available }} {% trans "Available" %}</p>
+      <p>{{ usages.floating_ips.available|quota }}</p>
     </div>
     <div class="clearfix"></div>
     <div class="quota_bar">{% horizon_progress_bar usages.floating_ips.used usages.floating_ips.quota %}</div>
