--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -5,6 +5,7 @@
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.quicksearch.js' type='text/javascript' charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/js/jquery/jquery.example.min.js' type='text/javascript' charset="utf-8"></script>
 <script src="{{ STATIC_URL }}horizon/js/jquery/jquery.table-sorter.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{ STATIC_URL }}horizon/js/underscore/underscore-min.js" type="text/javascript" charset="utf-8"></script>
 
 {% comment %} Bootstrap {% endcomment %}
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
