--- a/horizon/dashboards/settings/project/templates/project/_openrc.html
+++ b/horizon/dashboards/settings/project/templates/project/_openrc.html
@@ -27,6 +27,6 @@
 {% endblock %}
 
 {% block modal-footer %}
-    <input class="btn btn-primary pull-right" type="submit" value="{% trans "Download RC File" %}" />
+    <button class="btn btn-primary pull-right" type="submit">{% trans "Download RC File" %}"</button>
     {% if hide %}<a href="{% url horizon:settings:project:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>{% endif %}
 {% endblock %}
