--- a/openstack_dashboard/templates/auth/login.html
+++ b/openstack_dashboard/templates/auth/login.html
@@ -6,5 +6,5 @@
 {% block body_id %}splash{% endblock %}
 
 {% block content %}
-  {% include 'horizon/auth/_login.html' %}
+  {% include 'auth/_login.html' %}
 {% endblock %}
