Change Instance to Image for image detail page.
Fixes bug 985844

Change-Id: Ifc442aa343079c4a332bbea4d306e4cdf700821a

--- a/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_detail_overview.html
+++ b/horizon/dashboards/nova/templates/nova/images_and_snapshots/images/_detail_overview.html
@@ -1,6 +1,6 @@
 {% load i18n sizeformat %}
 
-<h3>{% trans "Instance Overview" %}</h3>
+<h3>{% trans "Image Overview" %}</h3>
 
 <div class="info row-fluid">
   <h4>{% trans "Info" %}</h4>
