--- a/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_vnc.html
+++ b/horizon/dashboards/nova/templates/nova/instances_and_volumes/instances/_detail_vnc.html
@@ -2,7 +2,7 @@
 
 <h3>{% trans "Instance VNC Console" %}</h3>
 {% if vnc_url %}
-<p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %}</p>
+<p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %} <a href="{{ vnc_url }}">{% trans "Click here to show only VNC" %}</a></p>
 <iframe src="{{ vnc_url }}" width="720" height="430"></iframe>
 {% else %}
 <p class='alert alert-error'>{% blocktrans %}VNC console is currently unavailabe. Please try again later.{% endblocktrans %}
