Improvements to flavor details in the launch instance dialog. The relevant pieces of the flavor are now shown in a table above the auota usage and update dynamically when a flavor is selected.
Fixes bug 988560

Change-Id: I688347054ad17732eb96d6580a68b39d5cf9a809

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -994,6 +994,20 @@ iframe {
   margin: -8px 0 8px;
 }
 
+div .flavor_table {
+  border: 1px solid #AAA;
+  width: 100%;
+  margin-bottom: 14px;
+}
+
+.flavor_table .flavor_name {
+  white-space: nowrap;
+  font-weight: bold;
+  text-align: left;
+  padding: 7px 12px 7px 7px;
+  width: 160px;
+}
+
 #main_content .row-fluid {
   margin: 10px 0 20px;
 }
