--- a/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
+++ b/horizon/dashboards/syspanel/templates/syspanel/users/_update.html
@@ -14,7 +14,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description" %}:</h3>
-    <p>{% trans "From here you can edit the user by changing their username, email, password, and default project." %}</p>
+    <p>{% trans "From here you can edit the user's details, including their default project." %}</p>
 </div>
 {% endblock %}
 
