--- a/openstack_dashboard/templates/_stylesheets.html
+++ b/openstack_dashboard/templates/_stylesheets.html
@@ -1,6 +1,8 @@
-{% comment %} CSS {% endcomment %}
-<link href='{{ STATIC_URL }}bootstrap/css/bootstrap.min.css' media='screen' rel='stylesheet' />
-<link href='{{ STATIC_URL }}dashboard/css/style.css' media='screen' rel='stylesheet' />
+{% load compress %}
 
-{% comment %} Favicon {% endcomment %}
+{% compress css %}
+<link href='{{ STATIC_URL }}bootstrap/less/bootstrap.less' type='text/less' media='screen' rel='stylesheet' />
+<link href='{{ STATIC_URL }}dashboard/less/horizon.less' type='text/less' media='screen' rel='stylesheet' />
+{% endcompress %}
+
 <link rel="shortcut icon" href="{{ STATIC_URL }}dashboard/img/favicon.ico"/>
