--- a/openstack_dashboard/templates/_scripts.html
+++ b/openstack_dashboard/templates/_scripts.html
@@ -24,6 +24,7 @@
 <script src='{{ STATIC_URL }}horizon/js/modals.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/forms.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/form_examples.js' type='text/javascript' charset='utf-8'></script>
+<script src='{{ STATIC_URL }}horizon/js/quotas.js' type='text/javascript' charset='utf-8'></script>
 
 {% comment %} Client-side Templates {% endcomment %}
 {% include "horizon/client_side/templates.html" %}
