bug 999371, add a simple test case to test the tag
add name and contact info to AUTHORS file. Change Author in the commit
message, add email to .mailmap

Change-Id: Ic9aba5dfde0aae0faee6b944d253cd3d9d8ea4e7

--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -1,7 +1,7 @@
-{% load horizon i18n %}
+{% load branding horizon i18n %}
 
 <div class='sidebar'>
-  <h1 class="brand clearfix"><a href="{% url horizon:user_home %}">{% trans "OpenStack Dashboard" %}</a></h1>
+  <h1 class="brand clearfix"><a href="{% url horizon:user_home %}">{% site_branding %}</a></h1>
 
   {% horizon_main_nav %}
 
