Adds pagination to Glance API and tables.
Fixes bug 981252.

Change-Id: Ib1fa6136947a23521dcdbf6d0d7ae783a6e0fae7

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -31,7 +31,7 @@
           <span>{% blocktrans count counter=rows|length %}Displaying {{ counter }} item{% plural %}Displaying {{ counter }} items{% endblocktrans %}</span>
           {% if table.has_more_data %}
           <span class="spacer">|</span>
-          <a href="?marker={{ table.get_marker }}">More&nbsp;&raquo;</a>
+          <a href="?{{ table.get_pagination_string }}">More&nbsp;&raquo;</a>
           {% endif %}
         </td>
       </td>
