Removing the current project from the drop-down.
Removing the current region as well. Also renaming
the label to be "Current" Project, and updating
the translation files.

Change-Id: I60e37ff9490b9709fb4bf9b2fd936b39092e215d

--- a/horizon/templates/horizon/common/_region_selector.html
+++ b/horizon/templates/horizon/common/_region_selector.html
@@ -6,7 +6,9 @@
     <ul id="region_list" class="dropdown-menu">
       <li class='divider'></li>
       {% for region in regions.available %}
-      <li><a class="ajax-modal" href="{% url horizon:auth_login %}?region={{ region.endpoint }}">{{ region.name }}</a></li>
+        {% if region.name != regions.current.name %}
+          <li><a class="ajax-modal" href="{% url horizon:auth_login %}?region={{ region.endpoint }}">{{ region.name }}</a></li>
+        {% endif %}
       {% endfor %}
     </ul>
   </div>
