--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -8,13 +8,13 @@
   {% if request.horizon.dashboard.supports_tenants %}
   <div id="tenant_switcher" class="dropdown switcher_bar" tabindex='1'>
     <a class="dropdown-toggle" data-toggle="dropdown" href="#tenant_switcher">
-      <h4>{% trans "Project" %}</h4>
+      <h4>{% trans "Current Project" %}</h4>
       <h3>{{ request.user.tenant_name }}</h3>
       </a>
     <ul id="tenant_list" class="dropdown-menu">
       <li class='divider'></li>
       {% for tenant in authorized_tenants %}
-        {% if tenant.enabled %}
+        {% if tenant.enabled and tenant.id != request.user.tenant_id %}
           <li><a href="{% url horizon:auth_switch tenant.id %}">{{ tenant.name }}</a></li>
         {% endif %}
       {% endfor %}
