--- a/horizon/templates/horizon/auth/_login.html
+++ b/horizon/templates/horizon/auth/_login.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block modal-header %}{% trans "Log In" %}{% endblock %}
-{% block modal_class %}login{% endblock %}
+{% block modal_class %}login {% if hide %}modal hide{% endif %}{% endblock %}
 
 {% block form_action %}{% url horizon:auth_login %}{% endblock %}
 
