Adding an AJAX indication to modal loading.
Fixes Bug #1006073

Change-Id: I438f59659b4e9b2d689401aa7f33f39cd54cc322

--- a/openstack_dashboard/static/dashboard/css/style.css
+++ b/openstack_dashboard/static/dashboard/css/style.css
@@ -556,6 +556,20 @@ form label {
     position: absolute;
 }
 
+.modal.loading {
+  width: 150px;
+  height: 150px;
+  margin: 0 auto;
+  overflow: hidden;
+}
+
+.modal.loading p {
+  text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 150px;
+}
+
 form.horizontal .form-field {
     float: left;
   }
