--- a/horizon/templates/horizon/client_side/templates.html
+++ b/horizon/templates/horizon/client_side/templates.html
@@ -1,3 +1,4 @@
 {% include "horizon/client_side/_modal.html" %}
 {% include "horizon/client_side/_table_row.html" %}
 {% include "horizon/client_side/_alert_message.html" %}
+{% include "horizon/client_side/_loading.html" %}
